# FlappyBird

./: README.md  pyproject.toml
flappybird/: bird.py  game.py  pipe.py  score.py  settings.py
